src/objects/Partners_SalesProfile__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Partners SalesProfiles</relationshipLabel>
        <relationshipName>Partners_SalesProfiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Lead Location record</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Partners SalesProfiles</relationshipLabel>
        <relationshipName>Partners_SalesProfiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Account Location record</inlineHelpText>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partners SalesProfiles</relationshipLabel>
        <relationshipName>Partners_SalesProfiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Partners SalesProfiles</relationshipLabel>
        <relationshipName>Partners_SalesProfiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partners_SalesProfile_GUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Partners SalesProfile GUID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Purchase_Status__c</fullName>
        <label>Purchase Status</label>
        <picklist>
            <picklistValues>
                <fullName>Freemium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Number__c</fullName>
        <label>Subscription Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Freemium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Partners SalesProfile</label>
    <nameField>
        <label>Partners SalesProfile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners SalesProfiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>